--- a/css/main.css
+++ b/css/main.css
@@ -1,22 +1,14 @@
+img.me {
+	width: 100%;
+	max-width: 250px;
+}
 
+div.tab-pane button.btn-lg {
+	font-size: 4em;
+	margin-top: 20px;
+	width: 100%;
+}
 
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+i.fa {
+	padding-right: 5px;
+}
